--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -1,11 +1,15 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
-  <div class="container">
-    <h2 class="title-page">Our Store</h2>
+  <div class="container d-flex justify-content-center">
+    
+    {% if 'search' in request.path %}
+    <h2 class="title-page">Search Result</h2>
+    {% else %}
+      <h2 class="title-page">Our Store</h2>
+    {% endif %}
+      
   </div>
   <!-- container //  -->
 </section>
@@ -35,9 +39,12 @@
                 <ul class="list-menu">
                   <li><a href="{% url 'store' %}">All Products</a></li>
                   {% for category in links %}
-                  <li><a href="{{category.get_url}}">{{category.category_name}} </a></li>
+                  <li>
+                    <a href="{{category.get_url}}"
+                      >{{category.category_name}}
+                    </a>
+                  </li>
                   {% endfor %}
-                    
                 </ul>
               </div>
               <!-- card-body.// -->
@@ -140,55 +147,96 @@
       <main class="col-md-9">
         <header class="border-bottom mb-4 pb-3">
           <div class="form-inline">
-            <span class="mr-md-auto"><b>{{product_count}}</b> Items founded </span>
+            <span class="mr-md-auto"
+              ><b>{{product_count}}</b> Items founded
+            </span>
           </div>
         </header>
         <!-- sect-heading -->
 
         <div class="row">
-         
-         {% for product in products %}
-         <div class="col-md-4">
-           <figure class="card card-product-grid">
-             <div class="img-wrap">
-                 <a href="{{ product.get_url }}">
-                     <img src="{{product.images.url}}" />
-                 </a>
-               
-             </div>
-             <!-- img-wrap.// -->
-             <figcaption class="info-wrap">
-               <div class="fix-height">
-                 <a href="{{ product.get_url }}" class="title"
-                   >{{product.product_name}}</a
-                 >
-                 <div class="price-wrap mt-2">
-                   <span class="price">${{product.price}}</span>
-                 </div>
-                 <!-- price-wrap.// -->
-               </div>
-               <a href="#" class="btn btn-block btn-primary">Add to cart </a>
-             </figcaption>
-           </figure>
-         </div>
-         <!-- col.// -->
-         {% endfor %}
+          
+          {% if products %}
             
+      
+            
+          {% for product in products %}
+          <div class="col-md-4">
+            <figure class="card card-product-grid">
+              <div class="img-wrap">
+                <a href="{{ product.get_url }}">
+                  <img src="{{product.images.url}}" />
+                </a>
+              </div>
+              <!-- img-wrap.// -->
+              <figcaption class="info-wrap">
+                <div class="fix-height">
+                  <a href="{{ product.get_url }}" class="title"
+                    >{{product.product_name}}</a
+                  >
+                  <div class="price-wrap mt-2">
+                    <span class="price">${{product.price}}</span>
+                  </div>
+                  <!-- price-wrap.// -->
+                </div>
+                <a
+                  href="{{ product.get_url }}"
+                  class="btn btn-block btn-primary"
+                  >View Details
+                </a>
+              </figcaption>
+            </figure>
+          </div>
+          <!-- col.// -->
+          {% endfor %}
+          {% else %}
+          <div>
+            <h2>No result found. Please try again.</h2>
+          </div>
+          {% endif %}
         </div>
         <!-- row end.// -->
 
         <nav class="mt-4" aria-label="Page navigation sample">
+          {% if products.has_other_pages %}
+
           <ul class="pagination">
+            {% if products.has_previous %}
+            <li class="page-item">
+              <a
+                class="page-link"
+                href="?page={{products_previous_page_number}}"
+                >Previous</a
+              >
+            </li>
+            {% else %}
             <li class="page-item disabled">
               <a class="page-link" href="#">Previous</a>
             </li>
+            {% endif %}
+
+             {% for i in products.paginator.page_range %} 
+             
+             {% if products.number == i %}
+            
             <li class="page-item active">
-              <a class="page-link" href="#">1</a>
+              <a class="page-link" href="#">{{i}}</a>
             </li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            {% else %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{i}}">{{i}}</a>
+            </li>
+            {% endif %} 
+            {% endfor %}
+
+
+            {% if products.has_next %}
+            <li class="page-item"><a class="page-link" href="?page={{products_next_page_number}}">Next</a></li>
+            {% else %}
+            <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+            {% endif %}
           </ul>
+          {% endif %}
         </nav>
       </main>
       <!-- col.// -->
